--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,13 @@
 	border-width:1px;
 	border-color:green;
 }
+#red{
+	background-color:red;
+	border-width:1px;
+	border-color:black;
+}
+#green{
+	background-color:green;
+	border-width:1px;
+	border-color:yellow;
+}
